# ievalg

./: LICENSE  Makefile  README.md  pyproject.toml
ievalg/: prime_field.py
src/ievalg/: __init__.py  characteristic.py  common_factor.py  f2.py  field.py  mab.py  prime_field.py  small_prime.py  subconj.py  ut.py
tests/: test_common_factor.py  test_f2.py  test_field.py  test_prime_field.py  test_ut.py
tests/mab/: get_subdiag.py
tests/mab/inputs/: mab_01111111.mab  mab_10111111.mab  mab_11011111.mab  mab_11101111.mab  mab_11111111.mab
